--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
 requires-python = ">=3.11"
-dependencies = []
+dependencies = [
+    "google-api-python-client>=2.170.0",
+    "google-auth>=2.40.2",
+    "google-auth-oauthlib>=1.2.2",
+    "openai>=1.82.1",
+]
